ASR: use temp files for split audio and fixed config